--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.3",
     "autoprefixer": "10.4.14",
     "next": "13.4.3",
     "postcss": "8.4.23",
