--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/font": "^13.4.3",
     "autoprefixer": "10.4.14",
-    "next": "13.4.3",
+    "next": "^13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
