--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.3",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "next": "^13.4.4",
     "postcss": "8.4.23",
