--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/font": "^13.4.3",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
-    "next": "^13.4.4",
+    "next": "^13.4.6-canary.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
